# compare

./: .gitignore  CMakeLists.txt
src/: 1.txt  2.txt  DiffEngine.cpp  DiffEngine.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RecordConstants.h  RecordWidget.cpp  RecordWidget.h  ScannerWorker.cpp  ScannerWorker.h  VCDUFileReader.cpp  VCDUFileReader.h  main.cpp
src/resources/styles/: vscode_dark.qss
